antlr4AutoGen/ParPlusPlusParser.js
// Generated from ParPlusPlus.g4 by ANTLR 4.8
// jshint ignore: start
var antlr4 = require('antlr4/index');
var ParPlusPlusListener = require('./ParPlusPlusListener').ParPlusPlusListener;
var grammarFileName = "ParPlusPlus.g4";




var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "'int'", "'float'", "'char'", "'void'", "'program'", 
                     "'module'", "'var'", "'main'", "'if'", "'else'", "'return'", 
                     "'read'", "'write'", "'then'", "'to'", "';'", "','", 
                     "'['", "']'", "'{'", "'}'", "'('", "')'", "'+'", "'-'", 
                     "'*'", "'/'", "'%'", "'=='", "'>='", "'<='", "'!='", 
                     "'!'", "'||'", "'&&'", "'>'", "'<'", "'='", "'for'", 
                     "'while'", "'do'" ];

var symbolicNames = [ null, null, null, null, "VOID", "PROGRAM", "MODULE", 
                      "VAR", "MAIN", "IF", "ELSE", "RETURN", "READ", "WRITE", 
                      "THEN", "TO", "SEMICOLON", "COMMA", "LB", "RB", "LCB", 
                      "RCB", "LP", "RP", "PLUS", "MINUS", "MULT", "DIV", 
                      "MOD", "EQ", "GTEQ", "LTEQ", "NEQ", "NOT", "OR", "AND", 
                      "GT", "LT", "ASSIGN", "FOR", "WHILE", "DO", "ID", 
                      "INT", "FLOAT", "STRING", "CHAR", "WHITESPACE" ];

var ruleNames =  [ "program", "main", "varBlock", "vars", "rvars", "xvars", 
                   "yvars", "funcBlock", "funcEnd", "funcType", "params", 
                   "rparams", "varDimensionsInit", "aint", "statues", "statuesWithReturn", 
                   "statue", "semicolon", "varDimensions", "firstDim", "secondDim", 
                   "asignation", "funcCall", "returnFunc", "read", "write", 
                   "xwrite", "text", "ywrite", "decision", "decisiontwo", 
                   "xdecision", "forloop", "forlooptwo", "forloopthree", 
                   "whileloop", "whilelooptwo", "whileloopthree", "arguments", 
                   "rarguments", "expresion", "lessThanOrEqualExp", "greaterThanOrEqualExp", 
                   "equalsExp", "differentExp", "andExp", "orExp", "lessThan", 
                   "greaterThan", "notExp", "exp", "plus", "minus", "termino", 
                   "mult", "div", "mod", "factor", "type", "cte" ];

function ParPlusPlusParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

ParPlusPlusParser.prototype = Object.create(antlr4.Parser.prototype);
ParPlusPlusParser.prototype.constructor = ParPlusPlusParser;

Object.defineProperty(ParPlusPlusParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

ParPlusPlusParser.EOF = antlr4.Token.EOF;
ParPlusPlusParser.T__0 = 1;
ParPlusPlusParser.T__1 = 2;
ParPlusPlusParser.T__2 = 3;
ParPlusPlusParser.VOID = 4;
ParPlusPlusParser.PROGRAM = 5;
ParPlusPlusParser.MODULE = 6;
ParPlusPlusParser.VAR = 7;
ParPlusPlusParser.MAIN = 8;
ParPlusPlusParser.IF = 9;
ParPlusPlusParser.ELSE = 10;
ParPlusPlusParser.RETURN = 11;
ParPlusPlusParser.READ = 12;
ParPlusPlusParser.WRITE = 13;
ParPlusPlusParser.THEN = 14;
ParPlusPlusParser.TO = 15;
ParPlusPlusParser.SEMICOLON = 16;
ParPlusPlusParser.COMMA = 17;
ParPlusPlusParser.LB = 18;
ParPlusPlusParser.RB = 19;
ParPlusPlusParser.LCB = 20;
ParPlusPlusParser.RCB = 21;
ParPlusPlusParser.LP = 22;
ParPlusPlusParser.RP = 23;
ParPlusPlusParser.PLUS = 24;
ParPlusPlusParser.MINUS = 25;
ParPlusPlusParser.MULT = 26;
ParPlusPlusParser.DIV = 27;
ParPlusPlusParser.MOD = 28;
ParPlusPlusParser.EQ = 29;
ParPlusPlusParser.GTEQ = 30;
ParPlusPlusParser.LTEQ = 31;
ParPlusPlusParser.NEQ = 32;
ParPlusPlusParser.NOT = 33;
ParPlusPlusParser.OR = 34;
ParPlusPlusParser.AND = 35;
ParPlusPlusParser.GT = 36;
ParPlusPlusParser.LT = 37;
ParPlusPlusParser.ASSIGN = 38;
ParPlusPlusParser.FOR = 39;
ParPlusPlusParser.WHILE = 40;
ParPlusPlusParser.DO = 41;
ParPlusPlusParser.ID = 42;
ParPlusPlusParser.INT = 43;
ParPlusPlusParser.FLOAT = 44;
ParPlusPlusParser.STRING = 45;
ParPlusPlusParser.CHAR = 46;
ParPlusPlusParser.WHITESPACE = 47;

ParPlusPlusParser.RULE_program = 0;
ParPlusPlusParser.RULE_main = 1;
ParPlusPlusParser.RULE_varBlock = 2;
ParPlusPlusParser.RULE_vars = 3;
ParPlusPlusParser.RULE_rvars = 4;
ParPlusPlusParser.RULE_xvars = 5;
ParPlusPlusParser.RULE_yvars = 6;
ParPlusPlusParser.RULE_funcBlock = 7;
ParPlusPlusParser.RULE_funcEnd = 8;
ParPlusPlusParser.RULE_funcType = 9;
ParPlusPlusParser.RULE_params = 10;
ParPlusPlusParser.RULE_rparams = 11;
ParPlusPlusParser.RULE_varDimensionsInit = 12;
ParPlusPlusParser.RULE_aint = 13;
ParPlusPlusParser.RULE_statues = 14;
ParPlusPlusParser.RULE_statuesWithReturn = 15;
ParPlusPlusParser.RULE_statue = 16;
ParPlusPlusParser.RULE_semicolon = 17;
ParPlusPlusParser.RULE_varDimensions = 18;
ParPlusPlusParser.RULE_firstDim = 19;
ParPlusPlusParser.RULE_secondDim = 20;
ParPlusPlusParser.RULE_asignation = 21;
ParPlusPlusParser.RULE_funcCall = 22;
ParPlusPlusParser.RULE_returnFunc = 23;
ParPlusPlusParser.RULE_read = 24;
ParPlusPlusParser.RULE_write = 25;
ParPlusPlusParser.RULE_xwrite = 26;
ParPlusPlusParser.RULE_text = 27;
ParPlusPlusParser.RULE_ywrite = 28;
ParPlusPlusParser.RULE_decision = 29;
ParPlusPlusParser.RULE_decisiontwo = 30;
ParPlusPlusParser.RULE_xdecision = 31;
ParPlusPlusParser.RULE_forloop = 32;
ParPlusPlusParser.RULE_forlooptwo = 33;
ParPlusPlusParser.RULE_forloopthree = 34;
ParPlusPlusParser.RULE_whileloop = 35;
ParPlusPlusParser.RULE_whilelooptwo = 36;
ParPlusPlusParser.RULE_whileloopthree = 37;
ParPlusPlusParser.RULE_arguments = 38;
ParPlusPlusParser.RULE_rarguments = 39;
ParPlusPlusParser.RULE_expresion = 40;
ParPlusPlusParser.RULE_lessThanOrEqualExp = 41;
ParPlusPlusParser.RULE_greaterThanOrEqualExp = 42;
ParPlusPlusParser.RULE_equalsExp = 43;
ParPlusPlusParser.RULE_differentExp = 44;
ParPlusPlusParser.RULE_andExp = 45;
ParPlusPlusParser.RULE_orExp = 46;
ParPlusPlusParser.RULE_lessThan = 47;
ParPlusPlusParser.RULE_greaterThan = 48;
ParPlusPlusParser.RULE_notExp = 49;
ParPlusPlusParser.RULE_exp = 50;
ParPlusPlusParser.RULE_plus = 51;
ParPlusPlusParser.RULE_minus = 52;
ParPlusPlusParser.RULE_termino = 53;
ParPlusPlusParser.RULE_mult = 54;
ParPlusPlusParser.RULE_div = 55;
ParPlusPlusParser.RULE_mod = 56;
ParPlusPlusParser.RULE_factor = 57;
ParPlusPlusParser.RULE_type = 58;
ParPlusPlusParser.RULE_cte = 59;


function ProgramContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ParPlusPlusParser.RULE_program;
    return this;
}

ProgramContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ProgramContext.prototype.constructor = ProgramContext;

ProgramContext.prototype.PROGRAM = function() {
    return this.getToken(ParPlusPlusParser.PROGRAM, 0);
};

ProgramContext.prototype.ID = function() {
    return this.getToken(ParPlusPlusParser.ID, 0);
};

ProgramContext.prototype.SEMICOLON = function() {
    return this.getToken(ParPlusPlusParser.SEMICOLON, 0);
};

ProgramContext.prototype.varBlock = function() {
    return this.getTypedRuleContext(VarBlockContext,0);
};

ProgramContext.prototype.funcBlock = function() {
    return this.getTypedRuleContext(FuncBlockContext,0);
};

ProgramContext.prototype.main = function() {
    return this.getTypedRuleContext(MainContext,0);
};

ProgramContext.prototype.enterRule = function(listener) {
    if(listener instanceof ParPlusPlusListener ) {
        listener.enterProgram(this);
	}
};

ProgramContext.prototype.exitRule = function(listener) {
    if(listener instanceof ParPlusPlusListener ) {
        listener.exitProgram(this);
	}
};




ParPlusPlusParser.ProgramContext = ProgramContext;

ParPlusPlusParser.prototype.program = function() {

    var localctx = new ProgramContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, ParPlusPlusParser.RULE_program);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 120;
        this.match(ParPlusPlusParser.PROGRAM);
        this.state = 121;
        this.match(ParPlusPlusParser.ID);
        this.state = 122;
        this.match(ParPlusPlusParser.SEMICOLON);
        this.state = 123;
        this.varBlock();
        this.state = 124;
        this.funcBlock();
        this.state = 125;
        this.main();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function MainContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ParPlusPlusParser.RULE_main;
    return this;
}

MainContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
MainContext.prototype.constructor = MainContext;

MainContext.prototype.MAIN = function() {
    return this.getToken(ParPlusPlusParser.MAIN, 0);
};

MainContext.prototype.LP = function() {
    return this.getToken(ParPlusPlusParser.LP, 0);
};

MainContext.prototype.RP = function() {
    return this.getToken(ParPlusPlusParser.RP, 0);
};

MainContext.prototype.LCB = function() {
    return this.getToken(ParPlusPlusParser.LCB, 0);
};

MainContext.prototype.statues = function() {
    return this.getTypedRuleContext(StatuesContext,0);
};

MainContext.prototype.RCB = function() {
    return this.getToken(ParPlusPlusParser.RCB, 0);
};

MainContext.prototype.enterRule = function(listener) {
    if(listener instanceof ParPlusPlusListener ) {
        listener.enterMain(this);
	}
};

MainContext.prototype.exitRule = function(listener) {
    if(listener instanceof ParPlusPlusListener ) {
        listener.exitMain(this);
	}
};




ParPlusPlusParser.MainContext = MainContext;

ParPlusPlusParser.prototype.main = function() {

    var localctx = new MainContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, ParPlusPlusParser.RULE_main);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 127;
        this.match(ParPlusPlusParser.MAIN);
        this.state = 128;
        this.match(ParPlusPlusParser.LP);
        this.state = 129;
        this.match(ParPlusPlusParser.RP);
        this.state = 130;
        this.match(ParPlusPlusParser.LCB);
        this.state = 131;
        this.statues();
        this.state = 132;
        this.match(ParPlusPlusParser.RCB);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function VarBlockContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ParPlusPlusParser.RULE_varBlock;
    return this;
}

VarBlockContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
VarBlockContext.prototype.constructor = VarBlockContext;

VarBlockContext.prototype.VAR = function() {
    return this.getToken(ParPlusPlusParser.VAR, 0);
};

VarBlockContext.prototype.vars = function() {
    return this.getTypedRuleContext(VarsContext,0);
};

VarBlockContext.prototype.rvars = function() {
    return this.getTypedRuleContext(RvarsContext,0);
};

VarBlockContext.prototype.enterRule = function(listener) {
    if(listener instanceof ParPlusPlusListener ) {
        listener.enterVarBlock(this);
	}
};

VarBlockContext.prototype.exitRule = function(listener) {
    if(listener instanceof ParPlusPlusListener ) {
        listener.exitVarBlock(this);
	}
};




ParPlusPlusParser.VarBlockContext = VarBlockContext;

ParPlusPlusParser.prototype.varBlock = function() {

    var localctx = new VarBlockContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, ParPlusPlusParser.RULE_varBlock);
    try {
        this.state = 139;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case ParPlusPlusParser.VAR:
            this.enterOuterAlt(localctx, 1);
            this.state = 134;
            this.match(ParPlusPlusParser.VAR);
            this.state = 135;
            this.vars();
            this.state = 136;
            this.rvars();
            break;
        case ParPlusPlusParser.T__0:
        case ParPlusPlusParser.T__1:
        case ParPlusPlusParser.T__2:
        case ParPlusPlusParser.VOID:
        case ParPlusPlusParser.MAIN:
        case ParPlusPlusParser.LCB:
            this.enterOuterAlt(localctx, 2);

            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function VarsContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ParPlusPlusParser.RULE_vars;
    return this;
}

VarsContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
VarsContext.prototype.constructor = VarsContext;

VarsContext.prototype.type = function() {
    return this.getTypedRuleContext(TypeContext,0);
};

VarsContext.prototype.xvars = function() {
    return this.getTypedRuleContext(XvarsContext,0);
};

VarsContext.prototype.SEMICOLON = function() {
    return this.getToken(ParPlusPlusParser.SEMICOLON, 0);
};

VarsContext.prototype.enterRule = function(listener) {
    if(listener instanceof ParPlusPlusListener ) {
        listener.enterVars(this);
	}
};

VarsContext.prototype.exitRule = function(listener) {
    if(listener instanceof ParPlusPlusListener ) {
        listener.exitVars(this);
	}
};




ParPlusPlusParser.VarsContext = VarsContext;

ParPlusPlusParser.prototype.vars = function() {

    var localctx = new VarsContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, ParPlusPlusParser.RULE_vars);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 141;
        this.type();
        this.state = 142;
        this.xvars();
        this.state = 143;
        this.match(ParPlusPlusParser.SEMICOLON);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function RvarsContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ParPlusPlusParser.RULE_rvars;
    return this;
}

RvarsContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
RvarsContext.prototype.constructor = RvarsContext;

RvarsContext.prototype.vars = function() {
    return this.getTypedRuleContext(VarsContext,0);
};

RvarsContext.prototype.rvars = function() {
    return this.getTypedRuleContext(RvarsContext,0);
};

RvarsContext.prototype.enterRule = function(listener) {
    if(listener instanceof ParPlusPlusListener ) {
        listener.enterRvars(this);
	}
};

RvarsContext.prototype.exitRule = function(listener) {
    if(listener instanceof ParPlusPlusListener ) {
        listener.exitRvars(this);
	}
};




ParPlusPlusParser.RvarsContext = RvarsContext;

ParPlusPlusParser.prototype.rvars = function() {

    var localctx = new RvarsContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, ParPlusPlusParser.RULE_rvars);
    try {
        this.state = 149;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,1,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 145;
            this.vars();
            this.state = 146;
            this.rvars();
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);

            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function XvarsContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ParPlusPlusParser.RULE_xvars;
    return this;
}

XvarsContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
XvarsContext.prototype.constructor = XvarsContext;

XvarsContext.prototype.ID = function() {
    return this.getToken(ParPlusPlusParser.ID, 0);
};

XvarsContext.prototype.yvars = function() {
    return this.getTypedRuleContext(YvarsContext,0);
};

XvarsContext.prototype.varDimensionsInit = function() {
    return this.getTypedRuleContext(VarDimensionsInitContext,0);
};

XvarsContext.prototype.enterRule = function(listener) {
    if(listener instanceof ParPlusPlusListener ) {
        listener.enterXvars(this);
	}
};

XvarsContext.prototype.exitRule = function(listener) {
    if(listener instanceof ParPlusPlusListener ) {
        listener.exitXvars(this);
	}
};




ParPlusPlusParser.XvarsContext = XvarsContext;

ParPlusPlusParser.prototype.xvars = function() {

    var localctx = new XvarsContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, ParPlusPlusParser.RULE_xvars);
    try {
        this.state = 157;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,2,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 151;
            this.match(ParPlusPlusParser.ID);
            this.state = 152;
            this.yvars();
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 153;
            this.match(ParPlusPlusParser.ID);
            this.state = 154;
            this.varDimensionsInit();
            this.state = 155;
            this.yvars();
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function YvarsContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ParPlusPlusParser.RULE_yvars;
    return this;
}

YvarsContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
YvarsContext.prototype.constructor = YvarsContext;

YvarsContext.prototype.COMMA = function() {
    return this.getToken(ParPlusPlusParser.COMMA, 0);
};

YvarsContext.prototype.xvars = function() {
    return this.getTypedRuleContext(XvarsContext,0);
};

YvarsContext.prototype.enterRule = function(listener) {
    if(listener instanceof ParPlusPlusListener ) {
        listener.enterYvars(this);
	}
};

YvarsContext.prototype.exitRule = function(listener) {
    if(listener instanceof ParPlusPlusListener ) {
        listener.exitYvars(this);
	}
};




ParPlusPlusParser.YvarsContext = YvarsContext;

ParPlusPlusParser.prototype.yvars = function() {

    var localctx = new YvarsContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, ParPlusPlusParser.RULE_yvars);
    try {
        this.state = 162;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case ParPlusPlusParser.COMMA:
            this.enterOuterAlt(localctx, 1);
            this.state = 159;
            this.match(ParPlusPlusParser.COMMA);
            this.state = 160;
            this.xvars();
            break;
        case ParPlusPlusParser.SEMICOLON:
        case ParPlusPlusParser.RP:
            this.enterOuterAlt(localctx, 2);

            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function FuncBlockContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = ParPlusPlusParser.RULE_funcBlock;
    return this;
}

FuncBlockContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
FuncBlockContext.prototype.constructor = FuncBlockContext;

FuncBlockContext.prototype.type = function() {
    return this.getTypedRuleContext(TypeContext,0);
};

FuncBlockContext.prototype.MODULE = function() {
    return this.getToken(ParPlusPlusParser.MODULE, 0);
};

FuncBlockContext.prototype.ID = function() {
    return this.getToken(ParPlusPlusParser.ID, 0);
};

FuncBlockContext.prototype.LP = function() {
    return this.getToken(ParPlusPlusParser.LP, 0);
};

FuncBlockContext.prototype.params = function() {
    return this.getTypedRuleContext(ParamsContext,0);
};

FuncBlockContext.prototype.RP = function() {
    return this.getToken(ParPlusPlusParser.RP, 0);
};

FuncBlockContext.prototype.varBlock = function() {
    return this.getTypedRuleContext(VarBlockContext,0);
};

FuncBlockContext.prototype.LCB = function() {
    return this.getToken(ParPlusPlusParser.LCB, 0);
};

FuncBlockContext.prototype.statuesWithReturn = function() {
    return this.getTypedRuleContext(StatuesWithReturnContext,0);
};

FuncBlockContext.prototype.RCB = function() {
    return this.getToken(ParPlusPlusParser.RCB, 0);
};

FuncBlockContext.prototype.funcEnd = function() {
    return this.getTypedRuleContext(FuncEndContext,0);
};

FuncBlockContext.prototype.funcBlock = function() {
    return this.getTypedRuleContext(FuncBlockContext,0);
};

FuncBlockContext.prototype.VOID = function() {
    return this.getToken(ParPlusPlusParser.VOID, 0);
};

FuncBlockContext.prototype.statues = function() {
    return this.getTypedRuleContext(StatuesContext,0);
};

FuncBlockContext.prototype.enterRule = function(listener) {
    if(listener instanceof ParPlusPlusListener ) {
        listener.enterFuncBlock(this);
	}
};

FuncBlockContext.prototype.exitRule = function(listener) {
    if(listener instanceof ParPlusPlusListener ) {
        listener.exitFuncBlock(this);
	}
};




ParPlusPlusParser.FuncBlockContext = FuncBlockContext;

ParPlusPlusParser.prototype.funcBlock = function() {

    var localctx = new FuncBlockContext(this, this._ctx, this.state);
    this.enterRule(localctx, 14, ParPlusPlusParser.RULE_funcBlock);
    try {
        this.state = 191;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case ParPlusPlusParser.T__0:
        case ParPlusPlusParser.T__1:
        case ParPlusPlusParser.T__2:
            this.enterOuterAlt(localctx, 1);
            this.state = 164;
            this.type();
            this.state = 165;
            this.match(ParPlusPlusParser.MODULE);
            this.state = 166;
            this.match(ParPlusPlusParser.ID);
            this.state = 167;
            this.match(ParPlusPlusParser.LP);
            this.state = 168;
            this.params();
            this.state = 169;
            this.match(ParPlusPlusParser.RP);
            this.state = 170;
            this.varBlock();
            this.state = 171;
            this.match(ParPlusPlusParser.LCB);
            this.state = 172;
            this.statuesWithReturn();
            this.state = 173;
            this.match(ParPlusPlusParser.RCB);
            this.state = 174;
            this.funcEnd();
            this.state = 175;
            this.funcBlock();
            break;
        case ParPlusPlusParser.VOID:
            this.enterOuterAlt(localctx, 2);
            this.state = 177;
            this.match(ParPlusPlusParser.VOID);
            this.state = 178;
            this.match(ParPlusPlusParser.MODULE);
            this.state = 179;
            this.match(ParPlusPlusParser.ID);
            this.state = 180;
            this.match(ParPlusPlusParser.LP);
            this.state = 181;
            this.params();
            this.state = 182;
            this.match(ParPlusPlusParser.RP);
            this.state = 183;
            this.varBlock();
            this.state = 184;
            this.match(ParPlusPlusParser.LCB);
            this.state = 185;
            this.statues();
            this.state = 186;
            this.match(ParPlusPlusParser.RCB);
            this.state = 187;
            this.funcEnd();
            this.state = 188;
            this.funcBlock();
            break;
        case ParPlusPlusParser.MAIN:
            this.enterOuterAlt(localctx, 3);

            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

